[package]
name = "rypi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
axum-debug = "0.3.3"
clap = { version = "4.5.32", features = ["derive"] }
tokio = { version = "1.44.1", features = ["rt", "net", "time", "rt-multi-thread", "sync", "fs"] }
tokio-util = { version = "0.7.14", features = ["io"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = "0.3.19"
zip = "2.4.2"
